[gd_scene load_steps=5 format=2]

[ext_resource path="res://sniper/sniper.png" type="Texture" id=1]
[ext_resource path="res://sniper/sniper.gd" type="Script" id=2]
[ext_resource path="res://audio/sound effect/laserGun.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48.9595, 51.7364 )

[node name="Sniper" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="AimTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CoolDownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ShootAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="timeout" from="AimTimer" to="." method="_on_AimTimer_timeout"]
[connection signal="timeout" from="CoolDownTimer" to="." method="_on_CoolDownTimer_timeout"]
